2010-12-10  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Eric Seidel.

        [Chromium] Remove old JSONResultsGenerator script that existed for backward-compatibility
        https://bugs.webkit.org/show_bug.cgi?id=50796

        Also updating the test code to use JSONResultsGeneratorBase and
        to improve test coverage for incremental cases.

        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:

2010-12-10  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Darin Adler.

        prepare-ChangeLog --help doesn't mention --bug shorthand -b
        https://bugs.webkit.org/show_bug.cgi?id=50835

        * Scripts/prepare-ChangeLog: be more explicit about -b and match file style.

2010-12-10  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Bugs created by the commit-queue should all block on a master bug
        https://bugs.webkit.org/show_bug.cgi?id=50857

        This makes all bugs created by the commit-queue block on:
        https://bugs.webkit.org/show_bug.cgi?id=50856

        In the process of testing this, I found that the existing
        create_bug code was wrong.  I also found that existing
        unit tests for create-rollout used invalid values
        for options.blocks.  I fixed both issues and tested.

        * Scripts/webkitpy/tool/bot/flakytestreporter.py:
        * Scripts/webkitpy/tool/bot/flakytestreporter_unittest.py:
        * Scripts/webkitpy/tool/commands/commandtest.py:
        * Scripts/webkitpy/tool/commands/download_unittest.py:
        * Scripts/webkitpy/tool/commands/upload_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:
        * Scripts/webkitpy/tool/steps/options.py:

2010-12-10  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Teach webkitpy how to follow duplicate chains when posting comments on flake bugs